Avoid crash in case of a weird chart type setting.

Please start the application from the console and monitor the output while running this version against a file that caused the crash for the first time. I am interested in the console output during read and write operations.

BUG: 221572

svn path=/trunk/playground/office/kmymoney/; revision=1121414